# meta-pytorch-email-triage

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  app.py  email_data.py  environment.py  requirements.txt
